--- a/src/App.css
+++ b/src/App.css
@@ -3,413 +3,410 @@
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
 body {
-  position: relative;
-  color: white;
-  height: 100vh;
-  background: linear-gradient(200.96deg,
-      #fedc2a -29.09%,
-      #dd5789 51.77%,
-      #7a2c9e 129.35%);
-  /* background-image: url("banner.png");
-  background-size: cover; */
-  background-color: transparent;
-  font-family: sans-serif;
-  overflow-y: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border-radius: 16px;
-  margin: 0;
-  z-index: -1000;
+    position: relative;
+    color: white;
+    height: 100vh;
+    /* background-image: url("banner.png");
+    background-size: cover; */
+    background: transparent linear-gradient(200.96deg, #fedc2a -29.09%, #dd5789 51.77%, #7a2c9e 129.35%);
+    font-family: sans-serif;
+    overflow-y: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 16px;
+    margin: 0;
+    z-index: -1000;
 }
 
 html {
-  background: #00000001;
-  margin: 0;
-  padding: 0;
+    background: #00000001;
+    margin: 0;
+    padding: 0;
 }
 
 .Button {
-  min-width: 128px;
+    min-width: 128px;
 }
 
 .Button.Disabled {
-  background-color: #fff5;
-  cursor: default;
+    background-color: #fff5;
+    cursor: default;
 }
 
 button {
-  background-color: #fffa;
-  backdrop-filter: blur(24px);
-  border: 0;
-  padding: 8px 16px;
-  border-radius: 5px;
-  appearance: none;
-  font-size: 1rem;
-  box-shadow: 0px 8px 28px -6px rgba(24, 24, 24, 0.6);
-  transition: all ease-in 0.1s;
-  cursor: pointer;
-  opacity: 0.9;
-  outline: none;
-  z-index: 0;
+    background-color: #fffa;
+    backdrop-filter: blur(24px);
+    border: 0;
+    padding: 8px 16px;
+    border-radius: 5px;
+    appearance: none;
+    font-size: 1rem;
+    box-shadow: 0px 8px 28px -6px rgba(24, 24, 24, 0.6);
+    transition: all ease-in 0.1s;
+    cursor: pointer;
+    opacity: 0.9;
+    outline: none;
+    z-index: 0;
 }
 
 button:focus {
-  outline: 4px solid #fff4;
-  z-index: 10;
+    outline: 4px solid #fff4;
+    z-index: 10;
 }
 
 button:active {
-  outline: 4px solid #fff4;
-  z-index: 10;
+    outline: 4px solid #fff4;
+    z-index: 10;
 }
 
 button:focus.Disabled {
-  outline: 4px solid #fff2;
+    outline: 4px solid #fff2;
 }
 
 button:active {
-  outline: 4px solid #fff2;
-  z-index: 10;
+    outline: 4px solid #fff2;
+    z-index: 10;
 }
 
 button:hover {
-  background-color: white;
-  color: #000a;
+    background-color: white;
+    color: #000a;
 }
 
 li {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
-  height: fit-content;
-  width: fit-content;
-  margin: 10px;
+    text-decoration: none;
+    height: fit-content;
+    width: fit-content;
+    margin: 10px;
 }
 
 a:hover {
-  opacity: 1;
-  text-decoration: none;
+    opacity: 1;
+    text-decoration: none;
 }
 
 .Hello {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
 }
 
 .BottomPanel {
-  display: flex;
-  justify-content: center;
-  align-content: baseline;
-  position: fixed;
-  bottom: 16px;
-  left: 16px;
-  align-self: center;
-  margin: 0;
-  padding: 16px;
-  height: 48px;
-  width: calc(100vw - 64px);
-  border-radius: 8px;
-  background: #000a;
-  backdrop-filter: blur(24px);
-  z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-content: baseline;
+    position: fixed;
+    bottom: 16px;
+    left: 16px;
+    align-self: center;
+    margin: 0;
+    padding: 16px;
+    height: 48px;
+    width: calc(100vw - 64px);
+    border-radius: 8px;
+    background: #000a;
+    backdrop-filter: blur(24px);
+    z-index: 100;
 }
 
 #PlayButton {
-  backdrop-filter: none !important;
-  display: block;
-  justify-self: center;
-  align-self: baseline;
-  border: 0;
-  background: white;
-  color: #222;
-  font-weight: bolder;
-  height: 100%;
+    backdrop-filter: none !important;
+    display: block;
+    justify-self: center;
+    align-self: baseline;
+    border: 0;
+    background: white;
+    color: #222;
+    font-weight: bolder;
+    height: 100%;
 }
 
 #PlayButton:active {
-  opacity: 0.75;
+    opacity: 0.75;
 }
 
 #PlayButton.Disabled {
-  display: block;
-  justify-self: center;
-  align-self: baseline;
-  border: 1px solid #fff2;
-  background: transparent;
-  color: #fff6;
-  font-weight: bolder;
-  height: 100%;
+    display: block;
+    justify-self: center;
+    align-self: baseline;
+    border: 1px solid #fff2;
+    background: transparent;
+    color: #fff6;
+    font-weight: bolder;
+    height: 100%;
 }
 
 .TitleBar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000000;
-  width: calc(100vw);
-  padding: 8px;
-  background-color: transparent;
-  min-height: 40px !important;
-  -webkit-app-region: drag;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000000;
+    width: calc(100vw);
+    padding: 8px;
+    background-color: transparent;
+    min-height: 40px !important;
+    -webkit-app-region: drag;
 }
 
 .TitleButtonsMacOS {
-  left: 0;
+    left: 0;
 }
 
 .TitleButtonsOther {
-  position: absolute;
-  top: 16px;
-  left: 16px;
-  width: calc(100% - 48px);
-  display: flex;
-  justify-content: space-between;
+    position: absolute;
+    top: 16px;
+    left: 16px;
+    width: calc(100% - 48px);
+    display: flex;
+    justify-content: space-between;
 }
 
 .TitleButton {
-  height: 32px;
-  padding: 4px 8px;
-  padding-top: 7px;
-  margin-right: 8px;
-  border-radius: 8px;
-  margin: 0;
-  -webkit-app-region: no-drag;
+    height: 32px;
+    padding: 4px 8px;
+    padding-top: 7px;
+    margin-right: 8px;
+    border-radius: 8px;
+    margin: 0;
+    -webkit-app-region: no-drag;
 }
 
 .TitleButtonGroup {
-  display: inline;
+    display: inline;
 }
 
 .TitleButtonGroup.Begin .TitleButton {
-  margin-right: 16px;
+    margin-right: 16px;
 }
 
 .TitleButtonGroup.End .TitleButton {
-  margin-left: 16px;
+    margin-left: 16px;
 }
 
 .TitleButton.Icon {
-  padding: 6px, 4px;
-  width: 32px;
+    padding: 6px, 4px;
+    width: 32px;
 }
 
-.TitleBar .TitleButtonsOther>.TitleButton:hover {
-  background-color: #f137;
-  border-color: #f133;
-  color: white;
+.TitleBar .TitleButtonsOther > .TitleButton:hover {
+    background-color: #f137;
+    border-color: #f133;
+    color: white;
 }
 
 .TitleButton.Begin {
-  display: inline;
-  align-self: flex-start;
+    display: inline;
+    align-self: flex-start;
 }
 
 .TitleButton.End {
-  display: inline;
-  justify-self: end;
-  align-self: flex-end;
+    display: inline;
+    justify-self: end;
+    align-self: flex-end;
 }
 
 .TitleBarText {
-  padding: 16px;
-  margin: 16px;
-  top: 25%;
-  position: relative;
-  display: inline;
-  justify-self: end;
-  text-align: center;
-  text-justify: auto;
-  align-self: center;
+    padding: 16px;
+    margin: 16px;
+    top: 25%;
+    position: relative;
+    display: inline;
+    justify-self: end;
+    text-align: center;
+    text-justify: auto;
+    align-self: center;
 }
 
 * {
-  user-select: none;
-  -webkit-user-select: none;
-  -webkit-user-drag: none;
-  cursor: default;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-user-drag: none;
+    cursor: default;
 }
 
 *::-webkit-scrollbar {
-  display: block;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  background: #fff1;
+    display: block;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    background: #fff1;
 }
 
 *::-webkit-scrollbar-thumb {
-  border-radius: 8px;
-  margin: 4px;
-  max-width: 2px;
-  border-style: solid;
-  border-color: transparent;
-  border-width: 4px;
-  background-clip: content-box !important;
-  background: #fff3;
+    border-radius: 8px;
+    margin: 4px;
+    max-width: 2px;
+    border-style: solid;
+    border-color: transparent;
+    border-width: 4px;
+    background-clip: content-box !important;
+    background: #fff3;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background: #fff5;
+    background: #fff5;
 }
 
 #SidePanel {
-  position: fixed;
-  top: 64px;
-  left: -532px;
-  width: 250px;
-  height: calc(100vh - 32px - 96px - 64px);
-  background: #000a;
-  border-radius: 8px;
-  transition: left ease-in 600ms;
-  backdrop-filter: blur(24px);
-  padding: 8px;
-  z-index: 100;
-  overflow-y: scroll;
+    position: fixed;
+    top: 64px;
+    left: -532px;
+    width: 250px;
+    height: calc(100vh - 32px - 96px - 64px);
+    background: #000a;
+    border-radius: 8px;
+    transition: left ease-in 600ms;
+    backdrop-filter: blur(24px);
+    padding: 8px;
+    z-index: 100;
+    overflow-y: scroll;
 }
 
 #SidePanel.Opened {
-  left: 16px;
-  transition: left ease-out 600ms;
+    left: 16px;
+    transition: left ease-out 600ms;
 }
 
 button.ProfileEntry {
-  border-radius: 0;
-  background-color: transparent;
-  backdrop-filter: none;
-  color: #fffa;
-  border: 1px solid #fff2;
-  width: 100%;
-  box-shadow: none;
-  -moz-outline-radius: 4px;
-  outline: 0 !important;
+    border-radius: 0;
+    background-color: transparent;
+    backdrop-filter: none;
+    color: #fffa;
+    border: 1px solid #fff2;
+    width: 100%;
+    box-shadow: none;
+    -moz-outline-radius: 4px;
+    outline: 0 !important;
 }
 
 button.ProfileEntry:hover {
-  background-color: #fff2;
+    background-color: #fff2;
 }
 
 button.ProfileEntry:focus {
-  z-index: 500;
+    z-index: 500;
 }
 
 button.ProfileEntry:active {
-  z-index: 500;
+    z-index: 500;
 }
 
 button.ProfileEntry:last-child {
-  border-bottom-right-radius: 8px;
-  border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
 }
 
 button.ProfileEntry:first-child {
-  border-top-right-radius: 8px;
-  border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
 }
 
 button.ProfileEntry:not(:last-child) {
-  margin-bottom: -1px;
-  border-bottom: 0;
+    margin-bottom: -1px;
+    border-bottom: 0;
 }
 
 .ModalBackground {
-  display: none;
-  z-index: 100000;
+    display: none;
+    z-index: 100000;
 }
 
 .ModalBackground.Shown {
-  display: flex;
-  opacity: 1;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: #0005;
-  -webkit-backdrop-filter: blur(8px);
-  border-radius: 16px;
-  justify-content: center;
-  align-content: center;
-  justify-items: center;
-  align-items: center;
+    display: flex;
+    opacity: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: #0005;
+    -webkit-backdrop-filter: blur(8px);
+    border-radius: 16px;
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+    align-items: center;
 }
 
 input {
-  border-radius: 8px;
-  background: #fff4;
-  border: 0;
-  padding: 10px;
-  color: white;
-  box-shadow: none;
-  width: calc(100% - 24px);
-  transition: linear 0.2s;
-  margin: 5px;
-  outline: 0 solid #fff4;
+    border-radius: 8px;
+    background: #fff4;
+    border: 0;
+    padding: 10px;
+    color: white;
+    box-shadow: none;
+    width: calc(100% - 24px);
+    transition: linear 0.2s;
+    margin: 5px;
+    outline: 0 solid #fff4;
 }
 
 input:focus {
-  outline: 5px solid #fff4;
-  border: 0;
-  transition: linear 0.2s;
+    outline: 5px solid #fff4;
+    border: 0;
+    transition: linear 0.2s;
 }
 
 input:active {
-  outline: 5px solid #fff6;
-  transition: linear 0.2s;
+    outline: 5px solid #fff6;
+    transition: linear 0.2s;
 }
 
 .Modal button {
-  margin: 5px;
-  max-width: fit-content;
+    margin: 5px;
+    max-width: fit-content;
 }
 
 .Modal {
-  z-index: 2000;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: center;
-  min-width: 400px !important;
-  max-width: 400px !important;
-  box-sizing: none;
-  background-color: #fff4;
-  padding: 16px;
-  border-radius: 16px;
+    z-index: 2000;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    min-width: 400px !important;
+    max-width: 400px !important;
+    box-sizing: none;
+    background-color: #fff4;
+    padding: 16px;
+    border-radius: 16px;
 }
 
 .ProgressBar {
-  height: 40px;
-  border-radius: 8px;
-  width: calc(100vw - 32px);
-  position: fixed;
-  opacity: 0;
-  left: 16px;
-  bottom: 56px;
-  display: block;
-  background: #fff4;
-  backdrop-filter: blur(24px);
-  transition: ease-in-out 0.4s;
+    height: 40px;
+    border-radius: 8px;
+    width: calc(100vw - 32px);
+    position: fixed;
+    opacity: 0;
+    left: 16px;
+    bottom: 56px;
+    display: block;
+    background: #fff4;
+    backdrop-filter: blur(24px);
+    transition: ease-in-out 0.4s;
 }
 
 .ProgressBar.Shown {
-  opacity: 1;
-  bottom: 86px;
+    opacity: 1;
+    bottom: 86px;
 }
 
 .ProgressBarInner {
-  height: 100%;
-  border-radius: 8px;
-  width: 0;
-  display: block;
-  background: #fff4;
-  transition: width ease-in-out 0.75s;
+    height: 100%;
+    border-radius: 8px;
+    width: 0;
+    display: block;
+    background: #fff4;
+    transition: width ease-in-out 0.75s;
 }
+
 .ProgressStatus {
-  position: relative;
-  bottom: 35px;
-  color: black;
+    position: relative;
+    bottom: 35px;
+    color: black;
 }
